Revisi Pengiriman email

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                         <div class="form-group">
                             <textarea class="form-textarea" rows="5" placeholder="Jelaskan secara singkat informasi/keluhan yang ingin anda kirim kan" required></textarea>
                         </div>
-                        <button type="submit" class="submit-btn">Send Message</button>
+                        <button type="button" class="submit-btn" onclick="sendEmail()">Send Message</button>
                     </form>
                 </div>
             </div>
