--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
                     <!-- CARD 1 - Informasi Sekolah -->
                     <div class="portfolio-card">
-                        <div class="portfolio-image ecommerce"></div>
+                        <div class="portfolio-image layanan"></div>
                         <div class="portfolio-content">
                             <h3 class="portfolio-title">Informasi Sekolah</h3>
                             <p class="portfolio-description">
@@ -176,7 +176,7 @@
 
                     <!-- CARD 2 - Layanan Pengaduan -->
                     <div class="portfolio-card">
-                        <div class="portfolio-image music"></div>
+                        <div class="portfolio-image laporan"></div>
                         <div class="portfolio-content">
                             <h3 class="portfolio-title">Layanan Pengaduan</h3>
                             <p class="portfolio-description">
