--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <ul class="nav-links">
                     <li><a href="#beranda">Beranda</a></li>
                     <li><a href="#tentang-kami">Tentang</a></li>
-                    <li><a href="#Ekstrakurikuler">Ekstrakurikuler</a></li>
                     <li><a href="#prestasi-sekolah">Prestasi</a></li>
+                    <li><a href="#Ekstrakurikuler">Ekstrakurikuler</a></li>
                     <li><a href="#layanan-title">Layanan</a></li>
                     <li><a href="#contact">Kontak</a></li>
                 </ul>
@@ -36,12 +36,12 @@
 
             <!-- MENU MOBILE -->
             <div class="mobile-nav" id="mobileNav">
-                <a href="#beranda">Beranda</a>
-                <a href="#tentang-kami">Tentang</a>
-                <a href="#Ekstrakurikuler">Ekstrakurikuler</a>
-                <a href="#prestasi-sekolah">Prestasi</a>
-                <a href="#layanan-title">Layanan</a>
-                <a href="#contact">Kontak</a>
+                    <li><a href="#beranda">Beranda</a></li>
+                    <li><a href="#tentang-kami">Tentang</a></li>
+                    <li><a href="#prestasi-sekolah">Prestasi</a></li>
+                    <li><a href="#Ekstrakurikuler">Ekstrakurikuler</a></li>
+                    <li><a href="#layanan-title">Layanan</a></li>
+                    <li><a href="#contact">Kontak</a></li>
             </div>
         </nav>
 
@@ -60,7 +60,6 @@
         <div class="container">
             <div class="section-header">
                 <h1 class="section-title">Tentang Sekolah</h1>
-                <p class="section-subtitle">Sekolah yang berkembang berkat kreativitas, kolaborasi, dan komitmen untuk mencerdaskan generasi muda.</p>
             </div>
 
             <div class="about-content">
@@ -69,11 +68,8 @@
             <div class="about-text" style="text-align: center; max-width: 700px;">
                 <h3>SDN Cikopomayak 04</h3>
                     <p>
-                    SDN Cikopomayak 04 dipimpin oleh Ibu YANTI NURYANTI, S.Pd.SD sebagai Kepala Sekolah.
-                    Untuk memberikan kesan yang lebih hangat dan harmonis, informasi mengenai pimpinan sekolah
-                    kini disajikan melalui foto bersama di bagian ini.
-                    Hal ini menggambarkan bahwa sekolah dibangun atas kerjasama seluruh tenaga pendidik,
-                    bukan hanya satu individu saja.
+                        SDN Cikopomayak 04 adalah sekolah dasar yang terus berkembang melalui kreativitas, kolaborasi,
+                        serta komitmen kuat dalam mencerdaskan generasi muda. Kami percaya bahwa lingkungan belajar yang nyaman, aman, dan inspiratif akan membantu peserta didik tumbuh menjadi pribadi yang unggul dan berkarakter.
                     </p>
             </div>
     </div>
@@ -83,21 +79,44 @@
                     <div class="about-card">
                         <h4>🎯 Misi</h4>
                         <p>
-                            "Mewujudkan peserta didik yang berkarakter, berprestasi, kreatif, serta memiliki kemampuan literasi
-                            teknologi dalam lingkungan belajar yang aman, ramah anak, inklusif, dan berbudaya."
-                        </p>
+                         <p>1. Membangun kebiasaan tertib beribadah, kajian keagamaan rutin dan 55 (Senyum, sapa, salam, santun dan supan)</p>
+                         <p>2. Menyelenggarakan pelatihan PM bagi guru dan KS untuk menunjang pembelajaran intrakurikuler dalam meningkatkan kecerdasan peserta didik dengan pendekatan kerangka pembelajaran mendalam (deep learning).</p>
+                         <p>3. Mengembangkan kegiatan kokurikuler dengan program "Koalisi Duha di Cimapat" yaitu kegiatan olahraga, literasi numerasi dan sholat duha di SD N Cikopomayak 04</p>
+                         <p>4. Memfasilitasi kegiatan ekstrakurikuler sesuai bakat dan minat untuk menunjang prestasi peserta didik (Pramuka, tari, nyanyi, degung, footsal, Matematika) ditingkat kecamatan Jasinga dan Kabupaten Bogor.</p>
                     </div>
 
                     <div class="about-card">
-                        <h4>💡 Visi</h4>
-                        <p>
-                            SDN Cikopomayak 04 bertekad menjadi sekolah dasar yang adaptif terhadap perkembangan digital,
-                            memperkuat kemampuan literasi siswa, serta menciptakan ruang belajar yang nyaman, modern,
-                            dan berorientasi pada pembentukan karakter.
-                        </p>
+                        <h4>💡 Tujuan</h4>
+                        <p>1 Terwujudnya peserta didik yang berakhlak mula melalui pelaksanaan budaya tertib beribadah dan gerakan 55 (Senyum, Sapa, Salam, Santun dan Sopan) di tahun pelajaran 2025-2026.</p>
+                        <p>2. Terpenuhinya kebutuhan belajar intrakurikuler peserta didik melalui pendekatan kerangka pembelajaran mendalam (deep learning), dan kokurikuler dalam program kegiatan "Koalisi Duha di Cimapat" yaitu kegiatan olahraga, literasi numerasi dan sholat duha di SD N Cikopomayak 04, untuk mencapai delapan dimensi profil lulusan di tahun pelajaran 2025-2026</p>
+                        <p>3. Terselenggaranya kegiatan ekstrakurikuler yang menunjang prestasi peserta didik pada kegiatan OSN, FLS3N, dan O2SN di tingkat kecamatan Jasinga di tahun pelajaran 2025-2026</p>
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+<section id="prestasi-sekolah" class="fade-in">
+        <div class="container">
+            <div class="section-header">
+                <h1 class="section-title">Prestasi Sekolah</h1>
+                <p class="section-subtitle">Pencapaian siswa dan sekolah dalam berbagai bidang.</p>
+            </div>
+                    <div class="about-card">
+                        <h4>Juara 1</h4>
+                        <p>“Terwujudnya peserta didik yang berkarakter, berprestasi, dan berwawasan teknologi dalam lingkungan belajar yang aman, inklusif, dan berbudaya.”</p>
+                    </div>
+                    
+                    <div class="about-card">
+                        <h4>Juara 2</h4>
+                        <p>Dalam jangka panjang, SD N 4 Cikopomayak berkomitmen menjadi sekolah dasar yang adaptif terhadap perkembangan digital, memperkuat literasi teknologi bagi siswa, serta menjadi pusat pembelajaran yang ramah anak, inklusif, dan berbasis karakter. Penguatan media informasi digital dan peningkatan fasilitas pembelajaran menjadi prioritas pengembangan ke depan.</p>
+                    </div>
+
+                     <div class="about-card">
+                        <h4>Juara 3</h4>
+                        <p>Dalam jangka panjang, SD N 4 Cikopomayak berkomitmen menjadi sekolah dasar yang adaptif terhadap perkembangan digital, memperkuat literasi teknologi bagi siswa, serta menjadi pusat pembelajaran yang ramah anak, inklusif, dan berbasis karakter. Penguatan media informasi digital dan peningkatan fasilitas pembelajaran menjadi prioritas pengembangan ke depan.</p>
+                    </div>
+                </div>
         </div>
     </section>
 
@@ -128,25 +147,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-
-    <section id="prestasi-sekolah" class="fade-in">
-        <div class="container">
-            <div class="section-header">
-                <h1 class="section-title">Prestasi Sekolah</h1>
-                <p class="section-subtitle">Pencapaian siswa dan sekolah dalam berbagai bidang.</p>
-            </div>
-                    <div class="about-card">
-                        <h4>Juara 1</h4>
-                        <p>“Terwujudnya peserta didik yang berkarakter, berprestasi, dan berwawasan teknologi dalam lingkungan belajar yang aman, inklusif, dan berbudaya.”</p>
-                    </div>
-                    
-                    <div class="about-card">
-                        <h4>Juara 2</h4>
-                        <p>Dalam jangka panjang, SD N 4 Cikopomayak berkomitmen menjadi sekolah dasar yang adaptif terhadap perkembangan digital, memperkuat literasi teknologi bagi siswa, serta menjadi pusat pembelajaran yang ramah anak, inklusif, dan berbasis karakter. Penguatan media informasi digital dan peningkatan fasilitas pembelajaran menjadi prioritas pengembangan ke depan.</p>
-                    </div>
-                </div>
         </div>
     </section>
 
