update prestasi sekolah

--- a/index.html
+++ b/index.html
@@ -102,18 +102,18 @@
                 <p class="section-subtitle">Pencapaian siswa dan sekolah dalam berbagai bidang.</p>
             </div>
                     <div class="about-card">
-                        <h4>Juara 1</h4>
-                        <p>“Terwujudnya peserta didik yang berkarakter, berprestasi, dan berwawasan teknologi dalam lingkungan belajar yang aman, inklusif, dan berbudaya.”</p>
+                        <h4>🥈 Juara 2 Lomba Pantomim</h4>
+                        <p>Siswa-siswi SDN Cikopomayak 04 berhasil meraih Juara 2 dalam lomba Pantomim tingkat kecamatan. Dengan kemampuan ekspresi yang kuat, kreativitas gerakan, serta kekompakan yang terjaga, tim pantomim tampil memukau dan mampu bersaing dengan peserta lain. Prestasi ini menjadi bukti bahwa siswa memiliki bakat seni yang luar biasa dan mampu mengembangkan potensi di bidang non-akademik.</p>
                     </div>
                     
                     <div class="about-card">
-                        <h4>Juara 2</h4>
-                        <p>Dalam jangka panjang, SD N 4 Cikopomayak berkomitmen menjadi sekolah dasar yang adaptif terhadap perkembangan digital, memperkuat literasi teknologi bagi siswa, serta menjadi pusat pembelajaran yang ramah anak, inklusif, dan berbasis karakter. Penguatan media informasi digital dan peningkatan fasilitas pembelajaran menjadi prioritas pengembangan ke depan.</p>
+                        <h4>🥈 Juara 2 MTQ (Musabaqah Tilawatil Qur’an)</h4>
+                        <p>Dalam ajang MTQ tingkat kecamatan, salah satu siswa SDN Cikopomayak 04 sukses meraih Juara 2. Penilaian ini diperoleh berkat kemampuan membaca Al-Qur’an yang baik, penguasaan tajwid, serta penghayatan ayat-ayat yang dilantunkan. Prestasi ini menjadi kebanggaan bagi sekolah dan diharapkan mampu mendorong siswa lain untuk terus mencintai dan mempelajari Al-Qur’an.</p>
                     </div>
 
                      <div class="about-card">
-                        <h4>Juara 3</h4>
-                        <p>Dalam jangka panjang, SD N 4 Cikopomayak berkomitmen menjadi sekolah dasar yang adaptif terhadap perkembangan digital, memperkuat literasi teknologi bagi siswa, serta menjadi pusat pembelajaran yang ramah anak, inklusif, dan berbasis karakter. Penguatan media informasi digital dan peningkatan fasilitas pembelajaran menjadi prioritas pengembangan ke depan.</p>
+                        <h4>🥉 Juara 3 Tarian Tradisional</h4>
+                        <p>Tim Tari SDN Cikopomayak 04 berhasil meraih Juara 3 dalam lomba Tarian Tradisional. Penampilan yang penuh semangat, harmonis, serta mencerminkan nilai budaya daerah membuat tim ini mendapat apresiasi dari para juri. Keberhasilan ini menjadi bukti bahwa siswa-siswi sekolah mampu berprestasi dalam bidang seni sekaligus melestarikan kekayaan budaya Indonesia.</p>
                     </div>
                 </div>
         </div>
